# oran-bootwrapper-aarch64

./: .gitignore  Makefile.am  configure.ac  configure~  model-dynamic-config.lds.S
common/: boot.c  gic-v3.c  init.c  platform_adi.c
include/: adrv906x_def.h  platform.h
